fixed sidebar overflow

--- a/assets/style.css
+++ b/assets/style.css
@@ -28,6 +28,8 @@ aside,
   flex-direction: column;
   padding: 5px;
   height: 700px;
+  overflow: hidden;
+  overflow-y: scroll;
 }
 
 .header {
@@ -53,6 +55,7 @@ aside {
   flex-direction: column;
   justify-content: space-between;
   height: 25%;
+  padding-bottom: 12px;
 }
 
 #search-input {
@@ -65,6 +68,8 @@ aside {
   background-color: rgb(16, 16, 193);
   color: white;
   border-radius: 5px;
+  margin-top: 10px;
+  margin-bottom: 8px;
 }
 
 #separator {
@@ -90,7 +95,7 @@ aside {
 .forecasts {
   flex-direction: column;
   width: 95%;
-  border-left: 2px solid black;
+  /* border-left: 2px solid black; */
   margin-top: 10px;
   margin-bottom: 7px;
 }
